[workspace]
members = ["packages/*", "contracts/*"]

[workspace.dependencies]
cosmwasm-schema = { git = "https://github.com/oraichain/cosmwasm.git" }
cosmwasm-std = { git = "https://github.com/oraichain/cosmwasm.git" }
cosmwasm-storage = { git = "https://github.com/oraichain/cosmwasm.git" }
cw-storage-plus = { git = "https://github.com/oraichain/cw-storage-plus.git" }
cw-utils = { git = "https://github.com/oraichain/cw-utils.git" }
schemars = "0.8.3"

[profile.release.package.cw1-subkeys]
codegen-units = 1
incremental = false

[profile.release.package.cw1-whitelist]
codegen-units = 1
incremental = false

[profile.release.package.cw3-fixed-multisig]
codegen-units = 1
incremental = false

[profile.release.package.cw3-flex-multisig]
codegen-units = 1
incremental = false

[profile.release.package.cw4-group]
codegen-units = 1
incremental = false

[profile.release.package.cw4-stake]
codegen-units = 1
incremental = false

[profile.release.package.cw20-base]
codegen-units = 1
incremental = false

[profile.release.package.cw20-ics20]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
