[package]
name = "cw-clock-example"
version = "0.1.0"
authors = ["Reece W <reecepbcups@gmail.com>", "Oraichain Labs"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

# TODO: change these versions to workspace once Oraichain is on v0.50
[dependencies]
cosmwasm-std = { version = "1.5.7" }
cosmwasm-schema = "1.5.7"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
thiserror = { version = "1.0.31" }
