[package]
name = "cw1-whitelist"
version = "1.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Implementation of an proxy contract using a whitelist"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }
cw1 = { path = "../../packages/cw1" }
cw2 = { path = "../../packages/cw2" }
cosmwasm-std = { workspace = true, features = ["staking"] }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cw-multi-test = { workspace = true }
derivative = "2"
