[package]
name = "cw3-fixed-multisig"
version = "1.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Implementing cw3 with an fixed group multisig"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }
cw2 = { path = "../../packages/cw2" }
cw3 = { path = "../../packages/cw3" }
cw-storage-plus = { workspace = true }
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw20 = { path = "../../packages/cw20" }
cw20-base = { path = "../cw20-base", features = ["library"] }
cw-multi-test = { workspace = true }
