[package]
name = "cw3-flex-multisig"
version = "1.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>, Oraichain Labs"]
edition = "2021"
description = "Implementing cw3 with multiple voting patterns and dynamic groups"
license = "Apache-2.0"
repository = "https://github.com/Oraichain/cw-plus"
homepage = "https://orai.io"
documentation = "https://docs.orai.io"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }
cw2 = {  version = "1.0.1" }
cw3 = {  version = "1.0.1" }
cw3-fixed-multisig = { version = "1.0.1", features = ["library"] }
cw4 = {  version = "1.0.1" }
cw-storage-plus = { workspace = true }
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw4-group = {  version = "1.0.1" }
cw-multi-test = "0.16.1"
cw20-base = {  version = "1.0.1" }
cw20 = { version = "1.0.1" }
