[package]
name = "cw3-flex-multisig"
version = "1.1.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>, Oraichain Labs"]
edition = "2021"
description = "Implementing cw3 with multiple voting patterns and dynamic groups"
license = "Apache-2.0"
repository = "https://github.com/Oraichain/cw-plus"
homepage = "https://orai.io"
documentation = "https://docs.orai.io"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.4.0" }
cw-utils = "1.0.1"
cw2 = "1.1.2"
cw3 = { path = "../../packages/cw3", version = "1.1.2" }
cw3-fixed-multisig = { path = "../cw3-fixed-multisig", version = "1.1.2", features = [
  "library",
] }
cw4 = { path = "../../packages/cw4", version = "1.1.2" }
cw20 = { path = "../../packages/cw20", version = "1.1.2" }
cw-storage-plus = "1.1.0"
cosmwasm-std = { version = "1.4.0", features = ["staking", "stargate"] }
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }

[dev-dependencies]
cw4-group = { path = "../cw4-group", version = "1.1.2" }
cw-multi-test = "0.16.5"
cw20-base = { path = "../cw20-base", version = "1.1.2" }
